--- a/electron2Dummy/package.json
+++ b/electron2Dummy/package.json
@@ -9,6 +9,7 @@
   "author": "paramasivam",
   "license": "ISC",
   "dependencies": {
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "node-notifier": "^5.1.2"
   }
 }
