--- a/cordovadummy/CordovaProject/package.json
+++ b/cordovadummy/CordovaProject/package.json
@@ -11,11 +11,24 @@
     "license": "Apache-2.0",
     "dependencies": {
         "cordova-android": "^6.2.3",
+        "cordova-plugin-battery-status": "^1.2.4",
+        "cordova-plugin-camera": "^2.4.1",
+        "cordova-plugin-compat": "^1.1.0",
+        "cordova-plugin-contacts": "^2.3.1",
+        "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-device-motion": "^1.2.5",
+        "cordova-plugin-device-orientation": "^1.0.7",
         "cordova-plugin-whitelist": "^1.3.2"
     },
     "cordova": {
         "plugins": {
-            "cordova-plugin-whitelist": {}
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-battery-status": {},
+            "cordova-plugin-camera": {},
+            "cordova-plugin-contacts": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-device-motion": {},
+            "cordova-plugin-device-orientation": {}
         },
         "platforms": [
             "android"
