--- a/reactjsDummy/reactblueprint/package.json
+++ b/reactjsDummy/reactblueprint/package.json
@@ -16,24 +16,21 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "browser-sync": "^2.18.13",
-    "browserify-middleware": "^7.1.0",
-    "express": "^4.16.2",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "reactify": "^1.1.1",
-    "watchify": "^3.9.0",
     "babel-preset-es2015": "6.9.0",
     "babel-preset-react": "6.11.1",
     "babelify": "7.3.0",
     "browser-sync": "2.13.0",
     "browserify": "13.0.1",
     "browserify-middleware": "7.0.0",
+    "cors": "^2.8.4",
+    "express": "^4.16.2",
     "history": "3.0.0",
     "jsxstyle": "0.0.18",
     "lodash": "4.13.1",
+    "mongoose": "^4.12.4",
+    "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
     "react": "15.1.0",
     "react-bootstrap": "0.29.5",
     "react-dom": "15.1.0",
