--- a/expressDummy/exp2/package.json
+++ b/expressDummy/exp2/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "employee.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint routers"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "morgan": "^1.9.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.14.0"
   }
 }
