--- a/expressDummy/exp-locallibrary-tutorial/package.json
+++ b/expressDummy/exp-locallibrary-tutorial/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "async": "^2.6.0",
     "body-parser": "~1.18.2",
+    "compression": "^1.7.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "helmet": "^3.9.0",
     "jade": "~1.11.0",
     "mongoose": "^5.0.0-rc0",
     "morgan": "~1.9.0",
