--- a/expressDummy/exp-locallibrary-tutorial/package.json
+++ b/expressDummy/exp-locallibrary-tutorial/package.json
@@ -6,7 +6,7 @@
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www"
   },
-  "engines":{
+  "engines": {
     "node": "9.3.0"
   },
   "dependencies": {
@@ -20,6 +20,7 @@
     "jade": "~1.11.0",
     "mongoose": "^5.0.0-rc0",
     "morgan": "~1.9.0",
+    "pug": "^2.0.0-rc.4",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
