--- a/expressDummy/exp-locallibrary-tutorial/package.json
+++ b/expressDummy/exp-locallibrary-tutorial/package.json
@@ -18,6 +18,7 @@
     "express": "~4.15.5",
     "helmet": "^3.9.0",
     "jade": "~1.11.0",
+    "moment": "^2.20.1",
     "mongoose": "^5.0.0-rc0",
     "morgan": "~1.9.0",
     "pug": "^2.0.0-rc.4",
