--- a/expressDummy/exp-locallibrary-tutorial/package.json
+++ b/expressDummy/exp-locallibrary-tutorial/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "express-validator": "^4.3.0",
     "helmet": "^3.9.0",
     "jade": "~1.11.0",
     "moment": "^2.20.1",
