--- a/expressDummy/exp-locallibrary-tutorial/package.json
+++ b/expressDummy/exp-locallibrary-tutorial/package.json
@@ -2,12 +2,13 @@
   "name": "exp-locallibrary-tutorial",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "v6.11.2"
+  },
+  "main": "./bin/www",
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www"
-  },
-  "engines": {
-    "node": "9.3.0"
   },
   "dependencies": {
     "async": "^2.6.0",
