--- a/microservices/java/customerprofile/src/main/resources/application.properties
+++ b/microservices/java/customerprofile/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.passworf=guest
+server.port=9090
