--- a/angularDummy/exercise/package.json
+++ b/angularDummy/exercise/package.json
@@ -25,8 +25,10 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "ngx-modialog": "^5.0.0",
     "popper": "^1.0.1",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
