--- a/angularDummy/exercise2/package.json
+++ b/angularDummy/exercise2/package.json
@@ -24,7 +24,8 @@
     "core-js": "^2.5.4",
     "ionicons": "^4.4.7",
     "ngx-modialog": "^5.0.1",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.1.0",
+    "rxjs-compat": "^6.1.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
