--- a/gulpDummy/package.json
+++ b/gulpDummy/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^4.0.2"
-  }
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-myth": "^2.0.0",
+    "gulp-uglify": "^3.0.2"
+  },
+  "dependencies": {}
 }
