--- a/webpackDummy/webpack-demo2/package.json
+++ b/webpackDummy/webpack-demo2/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:mocha": "mocha tests",
+    "test:karam": "karma start",
     "start": "webpack-dev-server --env development --open",
     "build": "webpack --env production",
     "lint:js": "eslint app/ webpack.*.js --cache"
@@ -16,12 +17,26 @@
     "autoprefixer": "^9.6.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.5",
+    "babel-plugin-istanbul": "^5.1.4",
+    "babili-webpack-plugin": "^0.1.2",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.0.0",
+    "cssnano": "^4.1.10",
     "eslint": "^5.16.0",
     "eslint-loader": "^2.1.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "glob": "^7.1.4",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.8.0",
+    "karma": "^4.2.0",
+    "karma-coverage": "^1.1.2",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-webpack": "^4.0.2",
+    "mocha": "^6.2.0",
+    "mocha-loader": "^2.0.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "phantomjs-prebuilt": "^2.1.16",
     "postcss-loader": "^3.0.0",
     "purecss": "^1.0.0",
     "purifycss-webpack": "^0.7.0",
@@ -30,7 +45,8 @@
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.4",
     "webpack-dev-server": "^3.7.2",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "worker-loader": "^2.0.0"
   },
   "dependencies": {
     "file-loader": "^4.0.0",
