--- a/nodejsDummy/notes-node/package.json
+++ b/nodejsDummy/notes-node/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "yargs": "^14.0.0"
   }
 }
