--- a/graphql/photo-share-api/package.json
+++ b/graphql/photo-share-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "second",
+  "name": "photo-share-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,10 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^2.9.15",
-    "express": "^4.17.1",
-    "graphql-playground-middleware-express": "^1.7.12",
-    "mongodb": "^3.4.1",
+    "apollo-server": "^2.9.15",
+    "graphql": "^14.5.8",
     "nodemon": "^2.0.2"
   }
 }
