--- a/d3/react-d3-2/package.json
+++ b/d3/react-d3-2/package.json
@@ -17,6 +17,7 @@
     "d3-fetch": "^1.1.2",
     "d3-geo": "^1.11.9",
     "d3-interpolate": "^1.4.0",
+    "d3-random": "^2.0.1",
     "d3-scale": "^3.2.1",
     "d3-scale-chromatic": "^1.5.0",
     "d3-selection": "^1.4.1",
