--- a/d3/dashboard/package.json
+++ b/d3/dashboard/package.json
@@ -1,35 +1,14 @@
 {
-  "name": "react-d3-2",
+  "name": "dashboard",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "bootstrap": "^4.4.1",
-    "colorbrewer": "^1.3.0",
-    "d3-array": "^2.4.0",
-    "d3-axis": "^1.0.12",
-    "d3-brush": "^1.1.5",
-    "d3-collection": "^1.0.7",
-    "d3-color": "^1.4.0",
-    "d3-dsv": "^1.2.0",
-    "d3-fetch": "^1.1.2",
-    "d3-geo": "^1.11.9",
-    "d3-hierarchy": "^1.1.9",
-    "d3-interpolate": "^1.4.0",
-    "d3-random": "^2.0.1",
-    "d3-sankey": "^0.12.3",
-    "d3-scale": "^3.2.1",
-    "d3-scale-chromatic": "^1.5.0",
-    "d3-selection": "^1.4.1",
-    "d3-shape": "^1.3.7",
-    "d3-svg-legend": "^2.25.6",
-    "d3-transition": "^1.3.2",
-    "d3-zoom": "^1.8.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
